--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,12 @@
   "extends": ["stylelint-config-recommended"],
   "ignoreFiles": ["dist", "node_modules"],
   "rules": {
-    "block-no-empty": null
+    "block-no-empty": null,
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["theme"]
+      }
+    ]
   }
 }
